force-app/main/default/objects/WorkItem__c/WorkItem__c.object-meta.xml
<CustomObject>
    <label>WorkItem</label>
    <nameField>
        <label>WorkItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>