force-app/main/default/objects/WorkItem__c/fields/KI_Hits__c.field-meta.xml
<CustomField>
    <fullName>KI_Hits__c</fullName>
    <label>KI_Hits</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>