force-app/main/default/objects/WorkItem__c/fields/KI_Id__c.field-meta.xml
<CustomField>
    <fullName>KI_Id__c</fullName>
    <label>KI Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>