force-app/main/default/objects/WorkItem__c/fields/KI_Link__c.field-meta.xml
<CustomField>
    <fullName>KI_Link__c</fullName>
    <formula>"https://success.salesforce.com/issues_view?id="&amp;KI_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KI Link</label>
    <type>Text</type>
</CustomField>