force-app/main/default/objects/WorkItem__c/fields/KI_Link_with_count__c.field-meta.xml
<CustomField>
    <fullName>KI_Link_with_count__c</fullName>
    <label>KI Link with count</label>
    <type>Url</type>
</CustomField>