force-app/main/default/objects/WorkItem__c/fields/MD_Type__c.field-meta.xml
<CustomField>
    <fullName>MD_Type__c</fullName>
    <label>MD_Type</label>
    <referenceTo>MD_Type__c</referenceTo>
    <relationshipLabel>WorkItems</relationshipLabel>
    <relationshipName>WorkItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>