force-app/main/default/objects/WorkItem__c/fields/MDChannelAffected__c.field-meta.xml
<CustomField>
    <fullName>MDChannelAffected__c</fullName>
    <label>MDChannelAffected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MDAPI</fullName>
            </value>
            <value>
                <fullName>SourceTracking</fullName>
            </value>
            <value>
                <fullName>UnlockedPkg</fullName>
            </value>
            <value>
                <fullName>ChangeSets</fullName>
            </value>
            <value>
                <fullName>ToolingAPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>