force-app/main/default/objects/WorkItem__c/fields/Number_Linked_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_Linked_Cases__c</fullName>
    <label>Number Linked Cases</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>