force-app/main/default/objects/WorkItem__c/fields/URL_Id__c.field-meta.xml
<CustomField>
    <fullName>URL_Id__c</fullName>
    <label>URL Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>