force-app/main/default/objects/WorkItem__c/fields/Work_Item_URL__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_URL__c</fullName>
    <formula>"https://gus.my.salesforce.com/"&amp;URL_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Item URL</label>
    <type>Text</type>
</CustomField>