force-app/main/default/objects/WorkItem__c/fields/WorkItemDescription__c.field-meta.xml
<CustomField>
    <fullName>WorkItemDescription__c</fullName>
    <label>Work Item Description</label>
    <type>TextArea</type>
</CustomField>