force-app/main/default/objects/WorkItem__c/fields/WorkItemOwningTeam__c.field-meta.xml
<CustomField>
    <fullName>WorkItemOwningTeam__c</fullName>
    <label>Work Item OwningTeam</label>
    <length>100</length>
    <type>Text</type>
</CustomField>