force-app/main/default/objects/WorkItem__c/fields/WorkItemScheduled_Release__c.field-meta.xml
<CustomField>
    <fullName>WorkItemScheduled_Release__c</fullName>
    <label>Work Item Scheduled Release</label>
    <length>36</length>
    <type>Text</type>
</CustomField>