force-app/main/default/objects/WorkItem__c/fields/WorkItemStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkItemStatus__c</fullName>
    <label>Work Item Status</label>
    <length>36</length>
    <type>Text</type>
</CustomField>